# discord-bot

./: Games.py  Mafia.py  credentials.py  main.py  motifs.db  pyproject.toml  requirements.txt
NDimish nukecodes/: NMain.py
NDimish nukecodes/Missile Codes (don't look)/: I'm serious
Yare Yare Man of spaghetti religion/: test.py
cogs/: Game.py  Greeting.py  Motif.py  Music.py  Wiki.py
gamebot/: __init__.py  helpers.py
gamebot/decorators/: guard.py
mafia/: __init__.py  game.py
