[tool.poetry]
name = "repl_python3_beta_Discord-Bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
PyNaCl = "^1.4.0"
youtube_dl = "^2021.5.16"
googletrans = "^3.0.0"
#datamart-isi = "^2.1.10"
pychalk = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
